new welcome screen for webapp

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- font awesome icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-tvcXo8lCrFkJ8hfjWQ/1aD5B3q+i+0vn4muUliKPW38+9VANfWeuyirgyYTGbjgWmYvsv/3f9WwSm1KbhSj6zw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/a673ecda07.js" crossorigin="anonymous"></script>
+    <!-- font awesome icons-->
+    <title>Vehicle Guardian - Web App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
